--- a/src/index.css
+++ b/src/index.css
@@ -38,12 +38,31 @@ h1 {
   text-align: center;
 }
 
+h1:first-letter {
+  font-size: clamp(22px, 6vw, 42px);
+}
+
 .firstname {
   margin-right: 5px;
 }
 
-h1:first-letter {
-  font-size: clamp(22px, 6vw, 42px);
+h3 {
+  display: inline-block;
+  font-family: "Cinzel Decorative", serif;
+  font-size: clamp(18px, 3vw, 22px);
+  font-weight: 200;
+}
+
+h3:first-letter {
+  font-size: clamp(16px, 6vw, 28px);
+}
+
+h4 {
+  color: rgb(191, 231, 255);
+  font-size: clamp(16px, 3vw, 20px);
+  text-align: center;
+  width: 100%;
+  font-style: italic;
 }
 
 .buttons {
@@ -103,6 +122,9 @@ nav,
 }
 
 .bio {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   margin-bottom: 20px;
   text-align: left;
   max-width: 100%;
@@ -118,6 +140,14 @@ p {
   color: white;
 }
 
+span {
+  font-weight: bold;
+}
+
+span > a {
+  display: inline;
+}
+
 .projectGallery,
 .imageGallery {
   display: flex;
@@ -130,7 +160,6 @@ p {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  max-width: 80%;
   margin: auto;
 }
 
@@ -154,7 +183,7 @@ p {
 .imageDetails {
   opacity: 0;
   text-align: center;
-  background-color: rgb(0, 0, 0, 0.5);
+  background-color: rgb(0, 0, 0, 0.8);
   position: absolute;
   top: 0px;
   transition: 0.5s;
@@ -232,5 +261,10 @@ footer {
 
   .bio {
     max-width: 800px;
+  }
+
+  .projectsContainer,
+  .imagesContainer {
+    max-width: 80%;
   }
 }
