--- a/src/index.css
+++ b/src/index.css
@@ -76,10 +76,11 @@ h3:first-letter {
 
 h4 {
   color: rgb(191, 231, 255);
-  font-size: clamp(16px, 3vw, 20px);
+  font-size: clamp(12px, 3vw, 20px);
   text-align: center;
   width: 100%;
   font-style: italic;
+  line-height: 1.2em;
 }
 
 .buttons {
@@ -104,7 +105,11 @@ a {
 }
 
 .faIcon {
-  font-size: 25px;
+  font-size: clamp(16px, 3vw, 28px);
+}
+
+a:hover {
+  color: dodgerblue;
 }
 
 nav,
@@ -122,11 +127,22 @@ nav,
   border-width: 1px;
 }
 
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  padding-top: 20px;
+  height: 90vh;
+}
+
 .headShotContainer {
+  order: 2;
   padding: 0px;
   min-width: 50%;
   max-width: 70%;
-  margin: auto;
+  margin: 0px 20px 20px 20px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -136,26 +152,35 @@ nav,
   margin-top: 10px;
   border-radius: 100%;
   width: 100%;
-  max-width: 200px;
+  max-width: 300px;
+}
+
+.greeting {
+  order: 1;
+  text-align: center;
+  margin: 0px 20px;
 }
 
 .bio {
+  order: 3;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 20px;
   text-align: left;
-  max-width: 100%;
-  padding: 20px 20px 0px 20px;
+  padding: 0px 20px;
 }
 
 .bio > p {
   text-indent: 20px;
+  margin-bottom: 20px;
 }
 
 p {
   font-size: clamp(16px, 3.5vw, 18px);
   color: white;
+  line-height: 1.5em;
 }
 
 span {
@@ -173,23 +198,33 @@ span > a {
   padding-bottom: 20px;
 }
 
+.projectGallery {
+  width: 100%;
+}
+
 .projectsContainer,
 .imagesContainer {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
   margin: auto;
   max-width: 100%;
 }
 
 .imagesContainer {
   margin: auto 20px;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.imagesContainer::-webkit-scrollbar {
+  display: none;
 }
 
 .project,
 .image {
   list-style: none;
-  margin: 10px;
+  margin: 10px 20px;
 }
 
 .projectCard,
@@ -197,9 +232,16 @@ span > a {
   position: relative;
 }
 
-.projectImage,
+.projectCard {
+  max-width: 600px;
+}
+
+.projectImage {
+  max-width: 100%;
+}
+
 .imageActual {
-  max-width: 400px;
+  max-width: 300px;
 }
 
 .projectDetails,
@@ -212,11 +254,23 @@ span > a {
   transition: 0.5s;
   height: 100%;
   width: 100%;
+  padding: 20px;
 }
 
 .projectDetails:hover,
 .imageDetails:hover {
   opacity: 1;
+}
+
+.projectDetails {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.projectDetails > p {
+  font-size: clamp(12px, 3.5vw, 18px);
 }
 
 .projectLinks {
@@ -227,6 +281,8 @@ span > a {
 .projectLinks > a {
   margin: 0px;
   padding: 5px;
+  font-size: clamp(12px, 3.5vw, 18px);
+  line-height: 1.2em;
 }
 
 .imagesContainer {
@@ -262,27 +318,60 @@ footer {
   justify-content: center;
 }
 
-@media (min-width: 800px) and (orientation: landscape) {
+@media (min-width: 700px) {
+  nav {
+    padding: 10px 20px;
+  }
+
+  .faIcon {
+    font-size: 25px;
+  }
+
   .hero {
-    display: flex;
-    flex-direction: row;
     justify-content: center;
   }
 
+  h4 {
+    font-size: clamp(16px, 3vw, 20px);
+  }
+
+  .projectDetails > p {
+    font-size: clamp(16px, 3.5vw, 18px);
+  }
+}
+
+@media (min-width: 1000px) and (orientation: landscape) {
+  .hero {
+    display: block;
+    width: 80%;
+    margin: auto;
+    padding-top: 150px;
+  }
+
   .headShotContainer {
-    margin: auto 0px;
-    margin-left: 20px;
-    padding: 20px;
-    min-width: 300px;
+    float: left;
+    min-width: 0px;
+    max-width: 400px;
+    height: 100%;
   }
 
   .mainHeadShot {
-    max-width: 300px;
-    max-height: 300px;
-    width: auto;
+    max-width: 400px;
+  }
+
+  .greeting {
+    width: 100%;
+    margin: 0px;
+    margin-bottom: 20px;
   }
 
   .bio {
-    max-width: 800px;
+    display: block;
+    width: 100%;
+    margin: 0px;
+  }
+
+  .projectCard {
+    max-width: 600px;
   }
 }
