--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ h1:first-letter {
   font-size: clamp(22px, 6vw, 42px);
 }
 
-.firstname {
+.firstName {
   margin-right: 5px;
 }
 
@@ -134,15 +134,15 @@ nav,
   align-items: center;
   text-align: center;
   padding-top: 20px;
-  height: 90vh;
+  height: 92vh;
 }
 
 .headShotContainer {
   order: 2;
   padding: 0px;
   min-width: 50%;
-  max-width: 70%;
-  margin: 0px 20px 20px 20px;
+  max-width: 50%;
+  margin: 0px 0px 20px 0px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -346,6 +346,7 @@ footer {
     width: 80%;
     margin: auto;
     padding-top: 150px;
+    height: 90vh;
   }
 
   .headShotContainer {
@@ -353,10 +354,12 @@ footer {
     min-width: 0px;
     max-width: 400px;
     height: 100%;
+    margin: 0px 50px 0px 0px;
   }
 
   .mainHeadShot {
     max-width: 400px;
+    margin-top: 0px;
   }
 
   .greeting {
